docs: update docs

--- a/src/docs/guides/sheet/advanced/custom-canvas.en-US.mdx
+++ b/src/docs/guides/sheet/advanced/custom-canvas.en-US.mdx
@@ -1,5 +1,6 @@
 import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
 
 import entryFile from './custom-canvas/demo-1/index.txt'
 import mainExtensionTs from './custom-canvas/demo-1/main-extension.txt'
