feat: add umd desc

--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -75,7 +75,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
       你也可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
     </Tabs.Tab>
     <Tabs.Tab label="umd">
-      如果你想不借助任何前端构建工具直接在浏览器中运行 Univer，你可以将以下代码复制到 `index.html` 文件中，然后在浏览器中打开该文件，即可体验打印、协同编辑、导入导出等功能。
+      如果你想不借助任何前端构建工具直接在浏览器中运行 Univer，你可以将以下代码复制保存到一个 HTML 文件中，然后双击在浏览器中打开该文件，即可体验打印、协同编辑、导入导出等功能。
       ```html
       <!DOCTYPE html>
 <html lang="en">
