--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -76,7 +76,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
       You can also find the source code for this template at [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit).
     </Tabs.Tab>
     <Tabs.Tab label="Without package manager">
-      如果你想不借助任何前端构建工具直接在浏览器中运行 Univer，你可以将以下代码复制保存到一个 HTML 文件中，然后双击在浏览器中打开该文件，即可体验打印、协同编辑、导入导出等功能。
+      If you want to run Univer directly in the browser without any frontend build tools, you can copy and save the following code to an HTML file, then double-click to open the file in the browser to experience features like printing, collaborative editing, importing/exporting, etc.
 
       ```html
       <!DOCTYPE html>
