--- a/src/docs/guides/general/troubleshooting.en-US.mdx
+++ b/src/docs/guides/general/troubleshooting.en-US.mdx
@@ -87,6 +87,18 @@ This is because you have missed the corresponding locales. You need to pass the 
 
 <Image src={missingLocaleImg} alt="Missing Locale" width={300} />
 
+### I'm using React but I'm running into some issues
+
+First, make sure your React version is 16.9 or higher, as Univer's UI layer depends on React and uses React Hooks.
+
+In addition, there is a known issue with the DI library `@wendellhu/redi` that Univer depends on, which does not currently support React's StrictMode. You can resolve this issue by removing StrictMode.
+
+```diff
+- <React.StrictMode>
+  <App />
+- </React.StrictMode>
+```
+
 ## Errors
 
 ### Error: [ThemeService]: current theme is not set!
