--- a/src/docs/guides/general/troubleshooting.zh-CN.mdx
+++ b/src/docs/guides/general/troubleshooting.zh-CN.mdx
@@ -94,6 +94,18 @@ $btn.addEventListener('click', () => {
 
 参考：https://github.com/dream-num/univer/issues/1314
 
+### 使用 React 但是碰到了一些问题
+
+首先请确保你的 React 版本在 16.9 以上，因为 Univer 的 UI 层依赖 React，并且使用了 React Hooks。
+
+此外，Univer 依赖的 DI 库 `@wendellhu/redi` 存在一个已知问题，即暂时不支持 React 的 StrictMode，通过移除 StrictMode 可以解决这个问题。
+
+```diff
+- <React.StrictMode>
+  <App />
+- </React.StrictMode>
+```
+
 ## 故障排查
 
 ### Error: [ThemeService]: current theme is not set!
