--- a/src/docs/guides/sheet/features/import-export.en-US.mdx
+++ b/src/docs/guides/sheet/features/import-export.en-US.mdx
@@ -77,3 +77,36 @@ configService.setConfig(EXCHANGE_EXPORT_SERVER_URL_KEY, `http://localhost:3010/u
 configService.setConfig(EXCHANGE_GET_TASK_SERVER_URL_KEY, `http://localhost:3010/universer-api/exchange/task/{taskID}`);
 configService.setConfig(EXCHANGE_SIGN_URL_SERVER_URL_KEY, `http://localhost:3010/universer-api/file/{fileID}/sign-url`);
 ```
+## Custom Usage
+
+If the default UI does not meet your needs, you can use the [Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to implement custom import and export processes. Please refer to [Server-Related Features](/guides/sheet/facade/sheet-api#server-related-features) for more details.
+
+
+## FAQ
+
+### How to Open or Edit an Excel File from a URL?
+
+Here is an implementation idea for your reference. First, use the browser's fetch API to download the file from the URL and convert it into a File object. Then, call the `importXLSXToUnitId` or `importXLSXToSnapshot` methods from the [Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to import it. The sample code is as follows:
+
+```javascript
+const url = 'https://example.com/filename.xlsx'; // Your Excel file URL
+
+// Function to fetch and convert the URL to a File object
+async function fetchExcelFile(url) {
+  try {
+    const response = await fetch(url);
+    const blob = await response.blob();
+    return new File([blob], 'filename.xlsx', { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+  } catch (error) {
+    console.error('Failed to fetch the file:', error);
+  }
+}
+
+// Fetch the file and import it as a snapshot
+fetchExcelFile(url).then(file => {
+  if (file) {
+    const snapshot = univerAPI.importXLSXToSnapshot(file);
+    console.log('Snapshot created:', snapshot);
+  }
+});
+```
