docs: update import-export.zh-CN.mdx

--- a/src/docs/guides/sheet/features/import-export.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/import-export.zh-CN.mdx
@@ -81,8 +81,7 @@ configService.setConfig(EXCHANGE_SIGN_URL_SERVER_URL_KEY, `http://localhost:3010
 
 ## 定制化使用
 
-如果你不满足默认 UI 提供的功能，你还可以调用 [Facade API](/guides/sheet/facade/facade#与服务端配合使用) 来实现自定义的导入和导出的流程，请阅读 [与服务端交互的功能](/zh-CN/guides/sheet/facade/sheet-api#与服务端交互的功能)。
-
+如果你不满足插件默认提供的功能，你还可以调用 [Facade API](/guides/sheet/facade/facade#与服务端配合使用) 来实现自定义的导入和导出的流程，请阅读 [与服务端交互的功能](/zh-CN/guides/sheet/facade/sheet-api#与服务端交互的功能)。
 
 ## 常见问题
 
@@ -90,7 +89,7 @@ configService.setConfig(EXCHANGE_SIGN_URL_SERVER_URL_KEY, `http://localhost:3010
 
 这里提供一种实现思路供参考，先通过浏览器 API 将 URL 下载转换得到一个 File 对象，然后调用 [Facade API](/guides/sheet/facade/facade#与服务端配合使用) 的 `importXLSXToUnitId` 或者 `importXLSXToSnapshot` 方法导入，参考代码如下：
 
-```javascript
+```typescript
 const url = 'https://example.com/filename.xlsx'; // 你的 Excel 文件 URL
 
 // 从 URL 获取文件并转换为 File 对象的函数
