--- a/src/docs/guides/sheet/features/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/permission.zh-CN.mdx
@@ -7,8 +7,27 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 是用来处理前端场景的权限拦截，当发现没有对应点位权限的时候，会终止代码执行并提示用户缺失权限。
 
 ## 如何使用
+1. 通过命令模式驱动
+通过驱动command来执行对应的权限设置，请参考 [权限设置demo](/playground?title=Permission%20Control) 中关于工作表权限设置的代码实现。
+如果你想设置区域保护，只需修改驱动的command以及对应的参数，具体内容请参考 [code](https://github.com/dream-num/univer/blob/6e2ef32809fbb56397dd6c4d7d7fbd0ed7698e39/packages/sheets/src/commands/commands/add-range-protection.command.ts)
 
-这里以`WorkbookEditablePermission`举例，其他点位类似
+2. 通过facadeAPI来调用，在facade实例上，我们暴露了一个可调节工作簿编辑权限的API，你可以通过调用这个API来设置工作簿的编辑权限。
+```typescript
+import { FUniver } from "@univerjs/facade";
+
+const univerAPI = FUniver.newAPI(univer);
+```
+
+然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，例如设置整体工作簿不可编辑：
+
+```typescript
+univerAPI.setWorkbookEditable(false);
+```
+
+本质是通过设置权限点位的值来控制权限的开关，权限点位对应的command在执行前会去读取该点位的值，假如权限值为false，则会终止command的执行。
+
+3. 拓展使用
+这里以`WorkbookEditablePermission`举例，在自己的插件中增加权限校验，其他点位类似
 
 ```typescript
 import { WorkbookEditablePermission } from '@univerjs/sheets';
@@ -29,7 +48,9 @@ class YourService {
 }
 ```
 
-### 第三方如何扩展权限点位
+你也可以拓展修改别得权限点位来实现对不同功能的权限控制，具体点位列表请参考文章底部。
+
+### 第三方插件如何扩展权限点位
 
 ```typescript
 import { IPermissionService,IPermissionPoint } from '@univerjs/core';
