docs: updated import desc

--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -457,7 +457,7 @@ activeWorkbook.onSelectionChange((selection) => {
 
 ### Import XLSX
 
-For importing, you need to use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server).
+To import via API, use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
 
 #### Import XLSX and Get `unitId`
 
@@ -481,7 +481,7 @@ univerAPI.importXLSXToSnapshot(file).then((data)=>{
 
 ### Export XLSX
 
-For exporting, you need to use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server).
+To export via API, use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
 
 #### Export XLSX via `unitId`
 
