docs: updated typo

--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -269,7 +269,7 @@ By calling the `createUniverSheet` method of `Univer`, you can create a new `Wor
 import { IWorkbookData, UniverInstanceType } from "@univerjs/core";
 
 const data: IWorkbookData = {};
-const workbook = univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
+const workbook = univer.createUnit(UniverInstanceType.UNIVER_SHEET, data);
 ```
 
 You can learn more about all the fields supported by `IWorkbookData` [here](/typedoc/@univerjs/core/interfaces/IWorkbookData).
