--- a/src/docs/guides/sheet/features/conditional-formatting.en-US.mdx
+++ b/src/docs/guides/sheet/features/conditional-formatting.en-US.mdx
@@ -12,12 +12,12 @@ Conditional formatting is a feature that sets rules in cells to automatically se
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs/sheets-conditional-formatting-ui
+    pnpm add @univerjs/sheets-conditional-formatting @univerjs/sheets-conditional-formatting-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs/sheets-conditional-formatting-ui
+    npm install @univerjs/sheets-conditional-formatting @univerjs/sheets-conditional-formatting-ui
     ```
   </Tabs.Tab>
 </Tabs>
@@ -27,6 +27,7 @@ Conditional formatting is a feature that sets rules in cells to automatically se
 ```typescript
 import '@univerjs/sheets-conditional-formatting-ui/lib/index.css';
 
+import { UniverSheetsConditionalFormattingPlugin } from '@univerjs/sheets-conditional-formatting-ui';
 import { UniverSheetsConditionalFormattingUIPlugin } from '@univerjs/sheets-conditional-formatting-ui';
 ```
 
@@ -50,5 +51,6 @@ const univer = new Univer({
 ## Register
 
 ```typescript
+univer.registerPlugin(UniverSheetsConditionalFormattingPlugin);
 univer.registerPlugin(UniverSheetsConditionalFormattingUIPlugin);
 ```
